--- a/pages/addSchedule/addSchedule.wxml
+++ b/pages/addSchedule/addSchedule.wxml
@@ -49,5 +49,8 @@
             <view class="picker">{{ displayToTime }}</view>
         </picker>
     </view>
+    <view class="footer">
+        <text>自定义日程不会被自动清除，它会一直保留在首页直到你删除它。</text>
+    </view>
     <button class="fab confirm" catchtap="submit"/>
 </form>
