--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,14 @@
 <block wx:if="{{ $login.isLogin === true }}">
-    <include src="/templates/comp_searchbar.wxml"/>
-    <include src="/templates/comp_slider.wxml"/>
+    <include src="/templates/comp_menu_tip.wxml"/>
+    <include src="/templates/comp_avatar.wxml"/>
     <include src="/templates/comp_dashboard.wxml"/>
+    <include src="/templates/comp_service.wxml"/>
     <include src="/templates/comp_schedule.wxml"/>
-    <contact-button/>
+    <contact-button type="default-light"/>
 </block>
 <block wx:elif="{{ $login.isLogin === false }}">
     <include src="/templates/comp_login.wxml"/>
 </block>
 <block wx:else>
-    <!-- 空白 -->
+    <text class="waiting">小猴正在赶来，马上就好啦</text>
 </block>
