--- a/pages/addSchedule/addSchedule.wxss
+++ b/pages/addSchedule/addSchedule.wxss
@@ -1,6 +1,6 @@
 .subtitle {
     padding: 15rpx 30rpx;
-    background: #f2f2f2;
+    background: #f4f4f4;
     text-align: left;
     color: #666;
     font-size: 28rpx;
@@ -16,18 +16,18 @@ item {
 }
 
 item .schedule-avatar {
-    background: #f2f2f2;
+    background: #f4f4f4;
     width: 80rpx;
     height: 80rpx;
     border-radius: 50%;
     flex-shrink: 0;
-    box-shadow: inset 0 8rpx 15rpx rgba(0, 0, 0, .2);
+    /*box-shadow: inset 0 8rpx 15rpx rgba(0, 0, 0, .2);*/
 }
 
 item .schedule-avatar.dot {
-    width: 40rpx;
-    height: 40rpx;
-    margin: 20rpx;
+    width: 20rpx;
+    height: 20rpx;
+    margin: 10rpx;
     -webkit-transition: .3s;
 }
 
@@ -42,6 +42,7 @@ item .line {
     flex-direction: row;
     align-items: center;
     justify-content: stretch;
+    margin: 5rpx 0;
 }
 
 item .going-on:before {
@@ -52,7 +53,6 @@ item .going-on:before {
 item .top-line {
     margin-top: 5rpx;
     margin-bottom: 5rpx;
-    opacity: .5;
 }
 
 item .top-left,
@@ -111,7 +111,7 @@ form radio {
 .picker-container .picker {
     padding: 10rpx 15rpx;
     background: #00abd4;
-    color: #fff;
+    color: #ffffff;
     border-radius: 6rpx;
     -webkit-transition: .3s;
 }
