--- a/templates/comp_schedule.wxss
+++ b/templates/comp_schedule.wxss
@@ -1,6 +1,6 @@
 schedule .subtitle {
     padding: 15rpx 30rpx;
-    background: #f7f7f7;
+    background: #f4f4f4;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -54,7 +54,7 @@ schedule button.loading {
     font-size: 26rpx;
     color: #aaa;
     padding: 20rpx;
-    background: #f7f7f7;
+    background: #fcfcfc;
     border-radius: 0 !important;
 }
 
@@ -70,12 +70,12 @@ schedule swiper {
 }
 
 schedule swiper-item {
-    background: #fff;
+    background: #ffffff;
 } 
 
 schedule swiper-item.delete {
     background: #f43434;
-    color: #fff;
+    color: #ffffff;
     text-align: left;
     line-height: 110rpx;
     font-size: 36rpx;
@@ -97,18 +97,18 @@ schedule item {
 }
 
 schedule item .schedule-avatar {
-    background: #f2f2f2;
+    background: #f4f4f4;
     width: 80rpx;
     height: 80rpx;
     border-radius: 50%;
     flex-shrink: 0;
-    box-shadow: inset 0 8rpx 15rpx rgba(0, 0, 0, .2);
+    /*box-shadow: inset 0 8rpx 15rpx rgba(0, 0, 0, .2);*/
 }
 
 schedule item .schedule-avatar.dot {
-    width: 40rpx;
-    height: 40rpx;
-    margin: 20rpx;
+    width: 20rpx;
+    height: 20rpx;
+    margin: 10rpx;
 }
 
 schedule item .schedule-desc {
@@ -127,10 +127,10 @@ schedule item .line {
     flex-direction: row;
     align-items: center;
     justify-content: stretch;
+    margin: 5rpx 0;
 }
 
 schedule item .top-line {
-    margin-bottom: 5rpx;
     opacity: .5;
 }
 
