--- a/templates/comp_avatar.wxml
+++ b/templates/comp_avatar.wxml
@@ -1,5 +1,7 @@
 <view class="avatar-container">
   <image class="avatar" src="{{ $avatar.url }}" mode="aspectFill" catchtap="$avatar_userMenu"/>
-  <text class="name">{{ $avatar.name }}</text>
-  <text class="identity">{{ $avatar.identity }}</text>
+  <view class="right-container">
+    <text class="name">{{ $avatar.name }}</text>
+    <text class="identity">{{ $avatar.identity }}</text>
+  </view>
 </view>
