--- a/templates/comp_avatar.wxss
+++ b/templates/comp_avatar.wxss
@@ -1,31 +1,35 @@
 .avatar-container {
-  width: 100%;
-  height: 450rpx;
   background: #00abd4;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  padding-bottom: 20rpx;
+  padding: 10rpx;
 }
 
 .avatar-container .avatar {
-  width: 160rpx;
-  height: 160rpx;
+  width: 100rpx;
+  height: 100rpx;
+  margin: 30rpx;
   border-radius: 50%;
   background: rgba(255, 255, 255, .1)
 }
 
 .avatar-container .name {
   display: block;
-  font-size: 32rpx;
+  font-size: 34rpx;
   color: #fff;
-  margin-top: 20rpx;
 }
 
 .avatar-container .identity {
   display: block;
   font-size: 26rpx;
   color: rgba(255, 255, 255, .7);
-  margin-top: 8rpx;
+  margin-top: 5rpx;
+}
+
+.right-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
