--- a/templates/comp_avatar.wxss
+++ b/templates/comp_avatar.wxss
@@ -1,17 +1,9 @@
 .avatar-container {
   background: #00abd4;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  padding: 10rpx;
-}
-
-.avatar-container .avatar {
-  width: 100rpx;
-  height: 100rpx;
-  margin: 30rpx;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, .1)
+  padding: 40rpx;
 }
 
 .avatar-container .name {
@@ -24,7 +16,7 @@
   display: block;
   font-size: 26rpx;
   color: rgba(255, 255, 255, .7);
-  margin-top: 5rpx;
+  margin-top: 15rpx;
 }
 
 .right-container {
