--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -11,3 +11,11 @@
   color: #ccc;
   padding: 450rpx 0;
 }
+
+.banner-temp {
+  display: block;
+  background: #cccccc;
+  padding: 150rpx 100rpx;
+  color: #888;
+  font-size: 28rpx;
+}
