--- a/templates/comp_login.wxml
+++ b/templates/comp_login.wxml
@@ -1,10 +1,12 @@
 <subpage class="login">
     <image class="logo" src="/images/logo_180.png" mode="aspectFit"></image>
-    <text class="slogan">更简单的校园生活</text>
+    <text class="slogan">小猴偷米丨小Q专属版</text>
     <input placeholder="一卡通号" focus="true" type="number" maxlength="9" bindinput="$login_onCardnumChange" bindconfirm="$login_submit"/>
     <input placeholder="统一身份认证密码" password="true" type="text" bindinput="$login_onPasswordChange" bindconfirm="$login_submit"/>
+    <text class="tip">
+注意：新生目前暂时不能登录，请关注小Q团队或小猴偷米官方通知！</text>
     <button type="blue" class="login" bindtap="$login_submit">登录</button>
-    <contact-button/>
+    <!--<contact-button/>-->
     <!-- <include src="/templates/comp_contact.wxml"/> -->
     <text class="copyright">© 2017 东南大学小猴偷米工作室 公益出品</text>
 </subpage>
