--- a/templates/comp_service.wxml
+++ b/templates/comp_service.wxml
@@ -1,8 +1,9 @@
 <service>
     <view class="subtitle">
         <image src="/images/ic_notice.png" mode="aspectFit"/>
-        <text>小猴公告</text>
+        <text>欢迎</text>
         <space/>
+        <text catchtap="$service_userMenu">退出登录</text>
     </view>
-    <text class="content">{{ $avatar.name ? $avatar.name + '，' : '' }}欢迎使用小Q定制版小猴偷米，小猴偷米工作室将联手小Q机器人，为你提供各类查询服务~</text>
+    <text class="content">{{ $avatar.name ? $avatar.name + '，' : '' }}欢迎使用小Q专属版小猴偷米，小猴偷米工作室将联手小Q机器人，为你提供各类便捷查询服务~</text>
 </service>
