--- a/templates/comp_login.wxss
+++ b/templates/comp_login.wxss
@@ -1,5 +1,17 @@
 @import "/templates/comp_contact.wxss";
 
+.background {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  background: #00abd4;
+}
+
 subpage.login {
     display: flex;
     flex-direction: column;
@@ -7,49 +19,59 @@ subpage.login {
 }
 
 subpage.login .logo {
-    width: 180rpx;
-    height: 180rpx;
+    width: 360rpx;
+    height: 240rpx;
     margin: 90rpx auto 20rpx;
 }
 
 subpage.login .slogan {
-    font-size: 36rpx;
-    color: #555;
+    font-size: 48rpx;
+    font-weight: 200;
+    line-height: 56rpx;
+    color: #fff;
     margin-bottom: 60rpx;
 }
 
 subpage.login .tip {
     font-size: 26rpx;
     width: 480rpx;
-    color: #ffafab;
+    color: rgba(255, 255, 255, .5);
+    font-weight: 200;
 }
 
 subpage.login input {
+    color: #fff;
     width: 480rpx;
     text-align: center;
-    font-size: 28rpx;
+    font-size: 32rpx;
     line-height: 44rpx;
     padding: 15rpx 20rpx;
-    background: #fafafa;
-    border-radius: 10rpx;
     margin-bottom: 20rpx;
+    border-bottom: 1rpx solid rgba(255, 255, 255, .5);
+    font-weight: 200;
+}
+
+subpage.login .input-placeholder {
+    color: rgba(255, 255, 255, .5);
+    font-weight: 200;
 }
 
 subpage.login button.login {
-    width: 520rpx;
+    width: 240rpx;
     text-align: center;
     border-radius: 10rpx;
     margin: 40rpx 0 20rpx;
+    background: #5dbcce;
 }
 
 subpage.login .copyright {
-    font-size: 26rpx;
-    color: #aaa;
+    font-size: 24rpx;
+    color: rgba(255, 255, 255, .5);
+    font-weight: 200;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
-    background: #ffffff;
     padding: 50rpx;
     text-align: center;
 }
