--- a/templates/comp_service.wxml
+++ b/templates/comp_service.wxml
@@ -1,9 +1,12 @@
 <service>
     <view class="subtitle">
-        <image src="/images/ic_notice.png" mode="aspectFit"/>
-        <text>欢迎</text>
+        <image src="/images/ic_qq.png" mode="aspectFit"/>
+        <text>与机器人做好朋友，超酷的诶~</text>
         <space/>
-        <text catchtap="$service_userMenu">退出登录</text>
     </view>
-    <text class="content">{{ $avatar.name ? $avatar.name + '，' : '' }}欢迎使用小Q专属版小猴偷米，小猴偷米工作室将联手小Q机器人，为你提供各类便捷查询服务~</text>
+    <text class="content">{{ $avatar.name ? $avatar.name + '，' : '' }}欢迎使用小Q专属版小猴偷米，小猴偷米工作室联手小Q机器人，为你提供各类便捷查询服务。欢迎大家添加小Q机器人为QQ好友（3394289178），等你来撩( ˶ '▽' ˶ )~</text>
 </service>
+
+<view class="logout" catchtap="$service_userMenu">
+    <text>退出登录</text>
+</view>
