--- a/pages/cardCharge/cardCharge.wxml
+++ b/pages/cardCharge/cardCharge.wxml
@@ -9,7 +9,7 @@
     </line>
     <line>
         <text class="row-name">记住密码</text>
-        <switch color="#00abd4" checked="{{ remember }}" bindchange="onRememberChange"/>
+        <switch color="#3688ff" checked="{{ remember }}" bindchange="onRememberChange"/>
     </line>
     <line class="amount">
       <button wx:for="{{ [50, 100, 200, 300, 500] }}" class="{{ amount == item ? 'selected' : '' }}" catchtap="changeAmount" data-to="{{ item }}">{{ item }}</button>
