--- a/templates/comp_avatar.wxml
+++ b/templates/comp_avatar.wxml
@@ -1,7 +1,8 @@
-<view class="avatar-container">
-  <image class="avatar" src="{{ $avatar.url }}" mode="aspectFill" catchtap="$avatar_userMenu"/>
+<view class="avatar-container" wx:if="{{ $avatar.name }}">
+  <image class="avatar" src="{{ $avatar.url }}"/>
   <view class="right-container">
     <text class="name">{{ $avatar.name }}</text>
     <text class="identity">{{ $avatar.identity }}</text>
   </view>
+  <image class="icon" src="/images/ic_quit.png" mode="aspectFit" catchtap="$avatar_userMenu"/>
 </view>
