--- a/templates/comp_avatar.wxss
+++ b/templates/comp_avatar.wxss
@@ -1,9 +1,11 @@
 .avatar-container {
-  background: #00abd4;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 10rpx;
+  margin: 25rpx;
+  border-radius: 10rpx;
+  box-shadow: 0 5rpx 30rpx rgba(0, 0, 0, .1);
 }
 
 .avatar-container .avatar {
@@ -11,19 +13,19 @@
   height: 100rpx;
   margin: 30rpx;
   border-radius: 50%;
-  background: rgba(255, 255, 255, .1)
+  background: rgba(0, 0, 0, .1)
 }
 
 .avatar-container .name {
   display: block;
   font-size: 34rpx;
-  color: #fff;
+  color: #333;
 }
 
 .avatar-container .identity {
   display: block;
-  font-size: 26rpx;
-  color: rgba(255, 255, 255, .7);
+  font-size: 28rpx;
+  color: #666;
   margin-top: 5rpx;
 }
 
@@ -32,4 +34,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.avatar-container .icon {
+  width: 48rpx;
+  height: 48rpx;
+  margin: 30rpx;
 }
