--- a/templates/comp_contact.wxss
+++ b/templates/comp_contact.wxss
@@ -7,7 +7,7 @@ contact {
 }
 
 contact .hint {
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #666;
     line-height: 40rpx;
     display: block;
@@ -15,11 +15,11 @@ contact .hint {
 }
 
 contact button {
-    font-size: 26rpx;
-    color: #00abd4;
+    font-size: 28rpx;
+    color: #3688ff;
     line-height: 40rpx;
     padding: 5rpx 20rpx;
-    border: 2rpx solid #00abd4;
+    border: 2rpx solid #3688ff;
     background: #ffffff;
     border-radius: 40rpx !important;
     pointer-events: none;
