--- a/templates/comp_dashboard.wxss
+++ b/templates/comp_dashboard.wxss
@@ -30,7 +30,7 @@ dashboard .arrow {
     top: 0;
     width: 25%;
     height: 6rpx;
-    background: #00abd4;
+    background: #3688ff;
     -webkit-transition: .3s;
     opacity: .7;
     /*z-index: 1;*/
@@ -51,8 +51,8 @@ dashboard item {
     justify-content: center;
     text-align: center;
     background: transparent;
-    border-left: 1rpx solid #e3e3e3;
-    border-right: 1rpx solid #e3e3e3;
+    border-left: 1rpx solid #f0f0f0;
+    border-right: 1rpx solid #f0f0f0;
     margin-left: -1rpx;
     -webkit-transition: .3s;
 }
@@ -135,19 +135,19 @@ dashboard item.expanded list {
 
 dashboard item .desc {
     color: #777;
-    font-size: 26rpx;
+    font-size: 28rpx;
     -webkit-transition: .3s;
 }
 
 dashboard item .info {
-    color: #00abd4;
+    color: #3688ff;
     font-size: 36rpx;
     padding-top: 10rpx;
     -webkit-transition: .3s;
 }
 
 dashboard item .navigate {
-    color: #00abd4;
+    color: #3688ff;
     font-size: 32rpx;
     padding: 27rpx 0;
     -webkit-transition: .3s;
@@ -178,7 +178,7 @@ dashboard item.expanded .intro {
 dashboard item .hint {
     display: block;
     color: #888;
-    font-size: 26rpx;
+    font-size: 28rpx;
     padding: 10rpx 0;
     height: 40rpx;
     overflow: hidden;
@@ -188,7 +188,7 @@ dashboard item .hint {
 dashboard item .declaration {
     display: block;
     color: #888;
-    font-size: 26rpx;
+    font-size: 28rpx;
     margin: 0 15rpx;
     padding: 20rpx 15rpx;
     border-top: 1rpx solid #e5e5e5;
@@ -236,21 +236,21 @@ dashboard item list .bottom-left {
 
 dashboard item list .top-left {
     font-size: 32rpx;
-    color: #00abd4;
+    color: #3688ff;
 }
 
 dashboard item list .top-right,
 dashboard item list .bottom-left {
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #666;
 }
 
 dashboard item list .bottom-right {
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #999;
 }
 
 dashboard item list .collapse {
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #aaa;
 }
