--- a/templates/comp_schedule.wxss
+++ b/templates/comp_schedule.wxss
@@ -1,5 +1,5 @@
 schedule .subtitle {
-    padding: 15rpx 30rpx;
+    padding: 20rpx 30rpx;
     background: #f4f4f4;
     display: flex;
     flex-direction: row;
@@ -11,13 +11,14 @@ schedule .subtitle {
 }
 
 schedule .subtitle image {
-    width: 32rpx;
-    height: 32rpx;
+    width: 42rpx;
+    height: 42rpx;
+  margin-right: 30rpx;
+  flex-shrink: 0;
 }
 
 schedule .subtitle text {
-    margin-left: 20rpx;
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #666;
 }
 
@@ -44,14 +45,14 @@ schedule .error image {
 
 schedule .error text {
     margin-left: 20rpx;
-    font-size: 26rpx;
+    font-size: 28rpx;
     padding: 20rpx;
     color: rgba(0, 0, 0, .7);
 }
 
 schedule button.loading {
     background: none;
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #aaa;
     padding: 20rpx;
     background: #fcfcfc;
@@ -148,7 +149,7 @@ schedule item .top-left {
 
 schedule item .top-right,
 schedule item .bottom-left {
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #666;
 }
 
@@ -158,7 +159,7 @@ schedule item .bottom-right {
 }
 
 schedule item .bottom-right {
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #999;
 }
 
