--wip-- [skip ci]

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,19 +1,28 @@
-<block wx:if="{{ $login.isLogin === true }}">
-    <include src="/templates/comp_menu_tip.wxml"/>
-    <block wx:if="{{ $service.serverHealth }}">
+<block wx:if="{{ $service.serverHealth === true }}">
+    <block wx:if="{{ $login.isLogin === true }}">
+        <include src="/templates/comp_menu_tip.wxml"/>
         <include src="/templates/comp_avatar.wxml"/>
         <include src="/templates/comp_dashboard.wxml"/>
         <include src="/templates/comp_jwc.wxml"/>
+        <include src="/templates/comp_service.wxml"/>
+        <include src="/templates/comp_schedule.wxml"/>
+        <contact-button type="default-light"/>
     </block>
-    <block wx:else>
+    <block wx:elif="{{ $login.isLogin === false }}">
+        <include src="/templates/comp_login.wxml"/>
+    </block>
+</block>
+<block wx:elif="{{ $service.serverHealth === false }}">
+    <block wx:if="{{ $login.isLogin === true }}">
+        <include src="/templates/comp_menu_tip.wxml"/>
+        <include src="/templates/comp_server_down.wxml"/>
+        <include src="/templates/comp_service.wxml"/>
+        <include src="/templates/comp_schedule.wxml"/>
+        <contact-button type="default-light"/>
+    </block>
+    <block wx:elif="{{ $login.isLogin === false }}">
         <include src="/templates/comp_server_down.wxml"/>
     </block>
-    <include src="/templates/comp_service.wxml"/>
-    <include src="/templates/comp_schedule.wxml"/>
-    <contact-button type="default-light"/>
-</block>
-<block wx:elif="{{ $login.isLogin === false }}">
-    <include src="/templates/comp_login.wxml"/>
 </block>
 <block wx:else>
     <text class="waiting">小猴正在赶来，马上就好啦</text>
