--- a/templates/comp_server_down.wxss
+++ b/templates/comp_server_down.wxss
@@ -7,6 +7,15 @@ server-down {
     position: relative;
 }
 
+server-down.guest {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 200rpx 50rpx;
+    position: relative;
+}
+
 server-down image {
     width: 180rpx;
     height: 180rpx;
@@ -23,8 +32,14 @@ server-down .title {
 }
 
 server-down .content {
-    font-size: 26rpx;
+    font-size: 28rpx;
     color: #555;
+}
+
+server-down .hint {
+    font-size: 26rpx;
+    color: #ccc;
+    margin-top: 20rpx;
 }
 
 server-down .zzz {
@@ -32,6 +47,16 @@ server-down .zzz {
     left: 50%;
     margin-left: 30rpx;
     top: 70rpx;
+    font-size: 24rpx;
+    color: #666;
+    opacity: 0;
+}
+
+server-down.guest .zzz {
+    position: absolute;
+    left: 50%;
+    margin-left: 30rpx;
+    top: 220rpx;
     font-size: 24rpx;
     color: #666;
     opacity: 0;
