--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -6,10 +6,4 @@
 @import "/templates/comp_login.wxss";
 @import "/templates/comp_jwc.wxss";
 @import "/templates/comp_server_down.wxss";
-
-.waiting {
-  display: block;
-  font-size: 36rpx;
-  color: #ccc;
-  padding: 450rpx 0;
-}
+@import "/templates/comp_loading.wxss";
