--- a/templates/comp_service.wxml
+++ b/templates/comp_service.wxml
@@ -1,4 +1,4 @@
-<service wx:if="{{ $service.message }}" class="{{ $service.message.url ? 'selectable': '' }}" catchtap="open" data-url="{{ $service.message.url }}">
+<service wx:if="{{ $service.message.content }}" class="{{ $service.message.url ? 'selectable': '' }}" catchtap="open" data-url="{{ $service.message.url }}">
     <view class="subtitle">
         <image src="/images/ic_notice.png" mode="aspectFit"/>
         <text>小猴公告</text>
